--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
+    "save": "^2.4.0",
+    "sweetalert2": "^8.18.6",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
